platform/kubernetes/sso-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirectpage
spec:
  selector: 
    matchLabels:
      app: sso
  replicas: 1
  template:
    metadata:
      labels:
        app: sso
    spec:
      containers:
      - name: name
        image: httpd
        ports:
        - containerPort: 80
        volumeMounts:
          - name: sso-index
            mountPath: "/usr/local/apache2/htdocs/"
            readOnly: true
      volumes:
      - name: sso-index
        configMap:
          name: sso-index
---
kind: Service
apiVersion: v1
metadata:
  name: ssofront
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: hyugo-portal
spec:
  selector:
    app:  sso
  type:  LoadBalancer
  ports:
  - name:  ssoport
    port:  80
    targetPort:  80
