platform/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - hyugo-sso.koreacentral.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: hyugo-sso.koreacentral.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: keycloak-http
          servicePort: 80
        path: /(.*)
